# genere

./: Cargo.toml  ChangeLog.md  README.md  README.tpl
examples/: complex.rs  main.rs
src/: errors.rs  generator.rs  graph.rs  lib.rs
src/lib/: errors.rs  generator.rs  lib.rs
