[package]
name = "genderly"
version = "0.0.1"
authors = ["Élisabeth Henry <liz.henry@ouvaton.org>"]
description = "A library for randomization of text respecting grammatical gender of sentences"
readme = "README.md"
keywords = ["text"]
repository = "https://github.com/lise-henry/genderly"
documentation = "https://docs.rs/genderly"
license = "MPL-2.0"
edition = "2018"

[lib]
name = "genderly"
path = "src/lib.rs"

[dependencies]
error-chain = "0.12"
