[package]
name = "genere"
version = "0.1.2"
authors = ["Élisabeth Henry <liz.henry@ouvaton.org>"]
description = "A library for randomization of text respecting grammatical gender of sentences"
readme = "README.md"
keywords = ["text"]
repository = "https://github.com/lise-henry/genderly"
documentation = "https://docs.rs/genderly"
license = "MPL-2.0"
edition = "2018"

[lib]
name = "genere"
path = "src/lib/lib.rs"

[[bin]]
name = "genere"
path = "src/bin/main.rs"
doc = false

[badges]
travis-ci = { repository = "lise-henry/genere", branch = "master" }


[dependencies]
error-chain = "0.12"
regex = "1"
lazy_static = "1"
rand = "0.6"
serde = "1"
serde_json = "1"
